# telegram-llm-tui

./: .env.example  .gitignore  AGENTS.md  CHANGES.md  Cargo.toml  PLANS.md  PLANS_ORDERED.md  README.md  SPEC.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/config/: app.toml
app/src/: config.rs  main.rs  prompt.rs  ui_state.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/telegram/: auth.rs  bootstrap.rs  cache.rs  error.rs  events.rs  mod.rs  send.rs  updates.rs
core/tests/: domain_events.rs  send_pipeline.rs
docs/: DECISIONS.md  PLANS.md  SPECS.md
docs/adr/: 20251231-data-dir-local.md  20251231-llm-backend-openai-env.md  20251231-telegram-client-grammers.md  20251231-tui-ratatui.md  20260105-llm-friendly-test-framework.md  20260106-logging-policy.md  20260108-telegram-domain-event-model.md  20260108-telegram-domain-event-stream.md  20260109-cache-store-sqlite.md
docs/plan-progress/: 2.1-telegram-core.md  2.2-telegram-core-domain-events-sdd.md  2.2-telegram-core-domain-events.md  2.3-telegram-core-send-pipeline-sdd.md  2.3-telegram-core-send-pipeline.md  2.4-telegram-core-persistence-sdd.md  2.4-telegram-core-persistence.md  3.1-tui-layout-v1-sdd.md  3.1-tui-layout-v1.md  3.1.5-ui-cache-wiring-sdd.md  3.1.5-ui-cache-wiring.md  3.2-input-ergonomics-sdd.md  3.2-input-ergonomics.md
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: grammers_auth_mapping.rs
llm/src/: lib.rs
ui/: Cargo.toml
ui/src/: input.rs  interaction.rs  lib.rs  test_harness.rs  view.rs
(+4 files in other folders)
