[package]
name = "telegram_llm_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
grammers-client = "0.8.1"
grammers-mtsender = "0.8.1"
grammers-session = "0.8.0"
grammers-tl-types = "0.8.0"
sqlite = "0.37.0"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
